fixtures/invalid/duplicate-local-anchor.lmk
# Build System

@decision id="build-system"
Decision id collides with the generated heading anchor.
